Fixed letter spacing on CTA

--- a/_sass/_cta.sass
+++ b/_sass/_cta.sass
@@ -45,6 +45,7 @@
     font-style: italic
     text-transform: initial
     font-weight: 300
+    letter-spacing: initial
 
     @include small
       font-size: ms(4)
